update btvn buoi 1

--- a/btvn_buoi1/index.html
+++ b/btvn_buoi1/index.html
@@ -21,7 +21,7 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         <form action="">
             <div class="typing-email">
-                <input type="text" value="Enter email">
+                <input type="text" placeholder="Enter Email">
             </div>
             <br>
             <div class="btn-submit">
